[gd_scene load_steps=21 format=3 uid="uid://ekng27jtktln"]

[ext_resource type="Script" uid="uid://0jmbr7mffyen" path="res://scripts/enemies/rammy.gd" id="1_2gi7w"]
[ext_resource type="Texture2D" uid="uid://dgkmppx162nke" path="res://assets/art/enemies/rammy.png" id="1_ug6jf"]
[ext_resource type="PackedScene" uid="uid://c23x1u2pibfqo" path="res://scenes/components/velocity_component.tscn" id="2_2gi7w"]
[ext_resource type="Resource" uid="uid://dydtdlfqmyuhn" path="res://assets/essences/rammy_essence.tres" id="2_703lk"]
[ext_resource type="PackedScene" uid="uid://dxs0ik3mokcdg" path="res://scenes/components/pathfind_component.tscn" id="3_foio6"]
[ext_resource type="Shader" uid="uid://d3ui741dnaup8" path="res://assets/shaders/flash_color.gdshader" id="3_plve8"]
[ext_resource type="PackedScene" uid="uid://cxswit11xvp2l" path="res://scenes/components/health_component.tscn" id="4_703lk"]
[ext_resource type="PackedScene" uid="uid://cv0febjpquqt" path="res://scenes/components/hitbox_component.tscn" id="5_plve8"]
[ext_resource type="PackedScene" uid="uid://c7jshr4urjdpu" path="res://scenes/components/hurtbox_component.tscn" id="6_n7vh5"]
[ext_resource type="Texture2D" uid="uid://bxscgbm5p0dx3" path="res://assets/art/enemies/rammy_knocked.png" id="9_703lk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n7vh5"]
resource_local_to_scene = true
shader = ExtResource("3_plve8")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_mult = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mbmno"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_q24l6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ptd1u"]

[sub_resource type="Animation" id="Animation_n7vh5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_ug6jf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.125, 0.125)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_plve8"]
resource_name = "knockback"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("1_ug6jf"), ExtResource("9_703lk"), ExtResource("1_ug6jf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.15, 0.15), Vector2(0.125, 0.125)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mbmno"]
_data = {
&"RESET": SubResource("Animation_n7vh5"),
&"knockback": SubResource("Animation_plve8")
}

[sub_resource type="Animation" id="Animation_myrg7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/flash_mult")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.125, 0.125)]
}

[sub_resource type="Animation" id="Animation_fcs02"]
resource_name = "flash"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/flash_mult")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.125, 0.125), Vector2(0.15, 0.15), Vector2(0.125, 0.125)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kvlxm"]
_data = {
&"RESET": SubResource("Animation_myrg7"),
&"flash": SubResource("Animation_fcs02")
}

[node name="Rammy" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 4
collision_mask = 4
script = ExtResource("1_2gi7w")
essence = ExtResource("2_703lk")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_n7vh5")
scale = Vector2(0.125, 0.125)
texture = ExtResource("1_ug6jf")
centered = false
offset = Vector2(-128, -192)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_mbmno")
debug_color = Color(0, 0.6, 0.701961, 0.145098)

[node name="VelocityComponent" parent="." instance=ExtResource("2_2gi7w")]
unique_name_in_owner = true
max_speed = 175.0
acceleration = 4.0

[node name="PathfindComponent" parent="." node_paths=PackedStringArray("velocity_component") instance=ExtResource("3_foio6")]
unique_name_in_owner = true
velocity_component = NodePath("../VelocityComponent")
interval_time = 0.5

[node name="HealthComponent" parent="." instance=ExtResource("4_703lk")]
unique_name_in_owner = true
max_health = 35.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("collision_shape") instance=ExtResource("5_plve8")]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2
damage_value = 15.0
collision_shape = NodePath("CollisionShape2D")
disable_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-4, -9)
shape = SubResource("CircleShape2D_q24l6")
debug_color = Color(0.839216, 0.184314, 0.184314, 0.286275)

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component", "collision_shape") instance=ExtResource("6_n7vh5")]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 4
health_component = NodePath("../HealthComponent")
collision_shape = NodePath("CollisionShape2D")
disable_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_ptd1u")
debug_color = Color(0.25098, 0.870588, 0, 0.152941)

[node name="KnockbackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.25
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_mbmno")
}

[node name="ShaderPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_kvlxm")
}

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="hit_area" from="HitboxComponent" to="." method="_on_hitbox_component_hit_area"]
